# poc-redis-cache

./: .gitignore  .travis.yml  AGENTS.md  CICDPlan.md  CMakeLists.txt  README.md  test_poc_cache_mproc.py
.github/workflows/: ci.yml  integration.yml
Cpp/: CMakeLists.txt  DeepDive.md  Design-documentation.md  ErrorHandlingPlan.md  README.md  RedisFileCache.cpp  RedisFileCacheLRU.cpp  RedisFileCacheLRU.h  RedisFileCacheLRU_Simulator.cpp  ScriptManager.h  TestRedisFileCache.cpp  TestRedisFileCacheLRU.cpp  redis_poc_cache.cpp  redis_poc_cache.h  redis_poc_cache_hiredis.cpp  redis_poc_cache_hiredis.hpp  redis_poc_cache_hiredis_lru.cpp  redis_poc_cache_hiredis_lru.hpp  test_poc_cache_mproc_hiredis.cpp  test_poc_cache_mproc_hiredis_lru.cpp
Cpp/no-lru-version/: RedisFileCache.cpp  RedisFileCache.hpp
Cpp/redispp-version/: CMakeLists.txt  redis_poc_cache.cpp  test_poc_cache_mproc.cpp
Cpp/unit-tests/: CMakeLists.txt  TestRedisFileCacheLRU.cpp  TestScriptManager.cpp
Python/: README.md  poc_cache_demo1.py  redis_ping.py  redis_poc_cache.py  redis_set_get.py
Terraform/: .gitignore  DeepDive.md  README.md  SimulatorLogS3UploadPlan.md  main.tf  outputs.tf  sit.tfvars.example  terraform.tfvars.example  userdata.sh  variables.tf
Tests/: README-3.13.25  output_1.csv  output_2.csv  output_bytes_matrix.csv  parse_monitor.py
Tests/run-3.13.26/: output_0.csv  output_3.csv  output_4.csv  output_5.csv  output_6.csv  output_7.csv  output_8.csv  output_9.csv
Tests/run-3.15.26/: output.csv
Tests/run-3.16.26-2/: discussion.md  output_0.csv  output_1.csv  output_2.csv  output_3.csv  output_4.csv  output_5.csv  output_6.csv  output_7.csv  output_8.csv  output_9.csv  output_bytes_matrix.csv
retired/poc-cache-aws/: .gitignore  README.md  main.tf  outputs.tf  terraform.tfvars.example
